# exoskeleton-dashboard

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: data_collector.py  main.py  models.py  websocket.py
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DebugTelemetry.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: telemetry.ts
